gitignore file change

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,10 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+node_modules*
 jspm_packages/
+node_modules/.vite/deps/_metadata.json
+
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
